# darkRadio

./: .gitignore  README.txt
HEPCAT_2022/: DPHandbookCode.ipynb  HEPCAT_Analysis.ipynb  HEPCAT_Analysis_2023Template.ipynb  HEPCAT_Analysis_groupA2023.ipynb  HEPCAT_Analysis_groupB2023.ipynb  Minicircuits_ZX60-63GLN_NoiseFigure.txt  PlotFuncs.py  ZX60Gain_Measured_BothAmps_5-30-22.npy
VNA/: AB-900A_Fressapce_ComPower.txt  S11Test_10-3-23.txt  Test2AmpData.csv  TestAmpData.csv  calcQVals.py  calcQVals_DipoleComparison.py  compQTheory.py  helloWorld.txt  plotS11.py  plotS11Calibration.py  plotS11CalibrationTerminator.py  plotTestAmpData.ipynb  processS11Data.ipynb  processVNA.py
VNA/CSVData/: PE15A1012-A_3-07-23.csv  PE15A1012-A_3-09-23.csv  PE15A1012-A_4-24-23.csv  PE15A1012-B_3-07-23.csv  PE15A1012-B_3-09-23.csv  PE15A1012-C_2-28-23.csv  PE15A1012-C_3-07-23.csv  PE15A1012-C_3-09-23.csv  PE15A1012_A_2-28-23.csv  PE15A1012_B.csv  PE15A1014_3-09-23.csv  PE15A1041_0-6GHz.csv  PE15A1041_2-28-23.csv  PE15A1041_3-07-23.csv  PE15A1041_3-09-23.csv  PE15A63000-2GHz_3-07-23.csv  PE15A63000_03-07-23.csv  PE15A63000_3-09-23.csv  SHP-50+_Highpass_3-07-23.csv  ZABP-510-S+_Bandpass_3-07-23.csv  ZKL-1R5_4-24-23.csv  ZX60-14012L-S+-A_9-06-23-2.csv  ZX60-14012L-S+-A_9-06-23.csv  ZX60-14012L-S+-B_9-06-23-2.csv  ZX60-14012L-S+-B_9-06-23.csv  ZX60-14012L-S+-C_9-06-23-2.csv  ZX60-14012L-S+-C_9-06-23.csv  ZX60-14012L-S+-D_9-06-23-2.csv  ZX60-14012L-S+-D_9-06-23.csv  ZX60-14012L-S+-E_9-06-23-2.csv  ZX60-14012L-S+-E_9-06-23.csv  ZX60-14012L-S+-F_9-06-23-2.csv  ZX60-14012L-S+-F_9-06-23.csv  ZX60-63GLN-A_3-09-23.csv  ZX60-63GLN-B_3-09-23.csv  ZX75LP-288-S+_LowPass_03-07-23.csv
VNA/ManufacturerData/: PE15A1012_Manufacturer.csv  PE15A1014_Manufacturer.csv  PE15A1041_Manufacturer.csv  PE15A63000_Manufacturer.csv  ZX60_14012L_S+_Manufacturer.csv  ZX60_63GLN_Manufacturer.csv  convertCSV_Minicircuits.py  createCSV.py
VNA/ZKL-1R5/: ZKL-1R5_Directivity.txt  ZKL-1R5_Gain.txt  ZKL-1R5_Processing.ipynb  ZKL-1R5_VSWR.txt  ZKL_MagReadings.csv  plotData.py
comsolSimulations/Af_eff_testing_9_11_23/: analyis.ipynb  analysis_shortDipoleInBox.ipynb  bicon_freespace_9_11_23.mph  genAngles.py  shortDipoleMoveInBox_s11_5p6_9_22_23.mph  shortDipoleMoveInBox_s11_9_20_23.mph
comsolSimulations/afNewMethod_12.26.21/: absEx_52CutPoints_biconBox_1VmDriveWall_12.26.21.txt  absEx_52CutPoints_biconFullFeature_1VmDriveWall_12.26.21.txt  absEx_52CutPoints_emptyBox_1VmDriveWall_12.26.21.txt  absEx_52CutPoints_emptyFullFeature_1VmDriveWall_12.26.21.txt  absLpv_biconBox_1VmDriveWall_12.26.21.txt  absLpv_biconFullFeature_1VmDriveWall_12.26.21.txt  afCalc.py  bicon4mmRerunRealAF.txt  bicon_box_12.26.21.mph  empty_box_12.26.21.mph
comsolSimulations/comsolScripts/: freqStepCalc.py  packDF.ipynb  testDf.npy
comsolSimulations/dipoleDriveBen/: dipoleInBoxV2_11.18..21.mph  dipoleInBox_11.18..21.mph
comsolSimulations/dipoleFreespaceTestGap/: 10mm.txt  2.5mm.txt  5mm.txt  7.5mm.txt  83mhzSweepGap.txt  dipole_antenna_freespace.mph  gapTest.py
comsolSimulations/dipoleMoveInBox_AfCalc_1.10.32/: currentOnWalls.mph  dipoleMoveInBox_1.10.23.mph  dipoleMoveInBox_run1.0Positions_1.12.23.mph  genCommaLists.ipynb  largeTabelTest.mph
comsolSimulations/paperFig4/: AfFromSlack_3_3_2021  empty_box_4.8.21.mph
comsolSimulations/playground/: dipoleInBox_6.17.22.mph  emptyRoomNoRes_benBullshit_10.1.21.mph  lpInBox.mph  lpPlayground.mph  points.txt
comsolSimulations/run1A_simulation_10_3_23/: aperture_3_7_24.npy  calcSimSystamatics.ipynb  cutPoints_dx0p1_dtheta90deg_r0p5.txt  freespace_bicon_frame_antenna_10_4_23.mph  freespace_bicon_frame_antenna_changeDimention_11_14_23.mph  freespace_currentDrive_2_28_24mph.mph  freqs.txt  freqs3_7_24.npy  noresRoom_bicon_frame_antenna_10_4_23.mph  noresRoom_modestir_v1_bicon_frame_antenna_10_4_23.mph  readme.txt
comsolSimulations/surfAvgEAf/: biconRoomNoRes_surfAvgE_11.23.21.mph
daqAnalysisAndExperiments/HeatMaps/: HeatMap.ipynb  HeatMap_copy.ipynb
daqAnalysisAndExperiments/LilyTesting/: HeatMap.ipynb
daqAnalysisAndExperiments/ROACH_Code/: ConfigDR.ini  ROACH1p1_daqWriteFile.ipynb  ROACH_SETUP.py  ROACH_funcs.py  ScpiInstrumentWrapper.py  averagedData_24HrRun_2-8-22.txt  basicAnalysis.py  blargh.csv  collectData_python3_3.py  collectData_python3_singleChannel.py  collectData_python3_singleChannel_clean_5-23-22.py  collectRQ.py  convToBin.py  enableOutput.py  graphExample.py  makePlots.py  plot3D.py
daqAnalysisAndExperiments/aaroniaAnalysis/: 8ghz0_small.csv  averageCsv.py  averageH5Data.py  csv2h5.py  saveDummyCsv.py
daqAnalysisAndExperiments/dutyCycleAntennaTermSimulation/: Untitled.ipynb  (+1 more)
daqAnalysisAndExperiments/teledyne/teledyneInstall/TSPD_SDK_linux_2023.1/examples/adq3_series/data_readout/: CMakeLists.txt  README.md  data_readout.c  plot.py  settings.h
daqAnalysisAndExperiments/teledyne/teledyneInstall/TSPD_SDK_linux_2023.1/examples/adq3_series/data_transfer/: CMakeLists.txt  data_transfer.c  plot.py
daqAnalysisAndExperiments/teledyne/teledyneInstall/TSPD_SDK_linux_2023.1/examples/disk_streaming/: CMakeLists.txt  README.md  disk_streaming.c  helpers.c  helpers.h  settings.h
daqAnalysisAndExperiments/teledyne/teledyneInstall/TSPD_SDK_linux_2023.1/examples/disk_streaming/disk_read/: CMakeLists.txt  README.md  disk_read.c  settings.h
daqAnalysisAndExperiments/teledyne/teledyneInstall/TSPD_SDK_linux_2023.1/examples/gen3_streaming/: CMakeLists.txt  README.md  gen3_streaming.c  plot.py  settings.h
drlib/: drlib.py  rawGain_run1_0_hz_dBm_10_3_22.npy  simClockJitter.ipynb
miscBackups/: dr2_bashrc_9.13.22
mmWave_DR/: statUniformPlotting_4_30_24.ipynb
qual/: latex.ipynb
scripts/: 100KThermistorTable.csv  calculatePoint.py  coordinateCalc.py  curveThermistor.py  getRigolDataAndPlot.py  getTemp.py  lakeshoreExample.py  listPorts.py  mode calculator.py  modeCalculator.py  rigolSaveData_usb.py  serialdevice.py  switchMeBabyOneMoreTime.py  testSerialDeviceClass.py  valonControl.py  valonControl_v2.py
thesis/: .~lock.pageCountSheet.ods#  pageCount.ipynb  pageCountSheet.ods  split_pdf.sh
(+1268 files in other folders)
